.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Deprecated register.py and join_form.cpt. This functionality has been moved 
  to plone.app.users.
  [esteele]

- Changed ``listActions`` on the workflow tool to no longer call the
  ``listGlobalActions`` method on every installed workflow. This method would
  internally call and calculate the worklist (reviewer_queue) for every
  workflow. The listActions method is called by the workflow menu to show the
  state drop down menu on almost all pages.
  [hannosch]

- Deprecated the ``selectedTabs`` script in favor of a method on the
  GlobalSectionsViewlet.
  [hannosch]

- Micro-optimize the CatalogNavigationTabs view.
  [hannosch]

- Added a more prominent upgrade warning to the top of the ZMI screen, instead
  of the old tiny note on the portal migration tool.
  [hannosch]

- Added a new ``@@plone-upgrade`` view, which replaces the old migration tool
  DTML ZMI screens.
  [hannosch]

- Added a simple ``advanced`` mode to the add site form. If advanced is passed
  as a query argument to the ``@@plone-addsite`` more options are available.
  The button in the ZMI uses the advanced mode by default. Currently the choice
  of omitting the default content and deselecting any of the default extension
  profiles are limited to the advanced mode.
  [hannosch]

- Expose the site language in the add site form and refactor the language
  guessing based on the browser language into that view. The addPloneSite
  function takes an explicit argument for the language now.
  [hannosch]

- Hardcode utf-8 for UnicodeSplitter, since Hanno says that's all we
  can accept and there's no way to use getSiteEncoding from the splitter.
  [alecm]

- Added option to skip the creation of the default example content in the new